00-resources/deployment-a.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microapp
  namespace: apps
  labels:
    app: demo-microapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-microapp
  template:
    metadata:
      labels:
        app: demo-microapp
    spec:
      containers:
      - name: microapp
        image: docker.io/library/micro-a:0.0.1
        imagePullPolicy: Never
        ports:
        - containerPort: 80
