00-resources/deployment-b.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microapp-b
  namespace: apps
  labels:
    app: demo-microapp-b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-microapp-b
  template:
    metadata:
      labels:
        app: demo-microapp-b
    spec:
      containers:
      - name: microapp-b
        image: docker.io/library/micro-b:0.0.1
        imagePullPolicy: Never
        ports:
        - containerPort: 80
