00-resources/service-a.yaml
apiVersion: v1
kind: Service
metadata:
  name: microapp-service
spec:
  selector:
    app: demo-microapp
  type: ClusterIP
  ports:
  - name: root
    protocol: TCP
    port: 80
    targetPort: 80
